# Chrysalis

./: .gitignore  LICENSE  README.md  pyproject.toml
chrysalis/: __init__.py
chrysalis/_internal/: _controller.py  _controller_test.py  _engine.py  _engine_test.py  _relation.py  _relation_test.py  _search.py  _search_test.py  _tables.py  _tables_test.py  _writer.py  _writer_test.py  conftest.py
examples/fairness/: X_test.joblib  adult_income_model.joblib  analysis.py  fairness.py  invariants.py  train.py  transformations.py  y_test.joblib
examples/llm/: expressions.py  generate_expression.py  llm.py  transformations.py
examples/randomllm/: analysis.py  bad_context.json  data.json  invariants.py  randomllm.py  transformations.py
examples/sql/: __main__.py  invariants.py  player_stats.parquet  sql.ipynb  transformations.py
search/: search.py  test_search.py
