[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chrysalis"
dynamic = ["version"]
description = 'A metamorphic testing framework for Python'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Nathan Huey", email = "nathanhuey44@gmail.com" },
  { name = "Jai Parera", email = "jaiparera@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[tool.hatch.version]
path = "chrysalis/__about__.py"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.ci]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.ci.scripts]
check = [
    "mypy --install-types --non-interactive {args:chrysalis tests}",
]

[tool.ruff.lint]
ignore = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["chrysalis"]

[tool.coverage.run]
source_pkgs = ["chrysalis", "tests"]
branch = true
parallel = true
omit = [
  "chrysalis/__about__.py",
]

[tool.coverage.paths]
chrysalis = ["chrysalis", "*/chrysalis/chrysalis"]
tests = ["tests", "*/chrysalis/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
