[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chrysalis"
dynamic = ["version"]
description = 'A metamorphic testing framework for Python'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Nathan Huey", email = "nathanhuey44@gmail.com" },
  { name = "Jai Parera", email = "jaiparera@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["pytest>=8.0.0", "duckdb>=1.2.0"]

[tool.hatch.version]
path = "chrysalis/__about__.py"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.mypy]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.mypy.scripts]
check = ["mypy --install-types --non-interactive {args:chrysalis tests}"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "T201",
  "PLC0414",
  "S101",
  "SLF001",
  "S311",
  "PLR2004",
  "TRY003",
  "EM101",
  "FBT001",
  "FBT002",
  "TCH003",
  "S301",
  "INP001",
]

[tool.ruff.lint.isort]
known-first-party = ["chrysalis"]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest chrysalis {args}"
run-cov = "coverage run -m pytest tests/*.py chrysalis {args}"
cov-combine = "coverage combine"
cov-report = "coverage report"

[tool.coverage.run]
source_pkgs = ["chrysalis", "tests"]
branch = true
parallel = true
omit = ["chrysalis/__about__.py"]

[tool.coverage.paths]
chrysalis = ["chrysalis", "*/chrysalis/chrysalis"]
tests = ["tests", "*/chrysalis/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
